--- a/index.html
+++ b/index.html
@@ -3,11 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">">
     <title>W. Notícias</title>
 </head>
 <body>
-    <header>
-        <h1>W. Notícias</h1>
+    <header class="header-mobile">
+        <img src="./assets/images/logo.svg" alt="Logo do site de notícias W. ">
+
+        <button>
+            <img src="./assets/images/icon-menu-close.svg" alt="ícone do menu hambúrguer">
+        </button>
     </header>
+
+    <main>
+        <section class="primeira-secao">
+            <img src="./assets/images/image-web-3-mobile.jpg" alt="ícone de puzzle colorido">
+
+            <h1>O futuro brilhante da Web 3.0?</h1>
+
+            <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
+
+            <button>Ler Mais</button>
+        </section>
+
+        <section>
+            <h2>Novo</h2>
+
+            <div>
+                <h3>Hidrogênio VS Carros Elétricos</h3>
+                <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?</p>
+            </div>
+            <div>
+                <h3>A arte gerada por IA</h3>
+                <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob demanda?</p>
+            </div>
+            <div>
+                <h3>O VC Funding está esgotado?</h3>
+                <p>O financiamento privado por empresas de capital de risco caiu por 50%.</p>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de computadores antigos">
+
+                <div>
+                    <strong>01</strong>
+                    <h2>Revivendo PCs antigos</h2>
+                    <p>E se PCs antigos pudessem receber peças modernas?</p>
+                </div>
+
+                <div>
+                    <img src="./assets/images/image-top-laptops.jpg" alt="imagens de laptop">
+                    <div>
+                        <strong>02</strong>
+                        <h2>Top 10 Laptop de 2024</h2>
+                        <p>Nossas melhores escolhas para diversas necessidades.</p>
+                    </div>
+
+                    <div>
+                        <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de um controle de video game">
+                        <div>
+                            <strong>03</strong>
+                            <h2>O crescimento dos Jogos</h2>
+                            <p>Como a pandemia tem gerado novas oportunidades.</p>
+                        </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
