--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
 </head>
 <body>
     <header class="header-mobile">
-        <img src="./assets/images/logo.svg" alt="Logo do site de notícias W. ">
+        <img src="./assets/images/logo.svg" alt="Logo do site de notícias W.">
 
         <button>
             <img src="./assets/images/icon-menu-close.svg" alt="ícone do menu hambúrguer">
         </button>
+
+        <nav>
+            <button>
+                <img src="./assets/images/icon-menu-close.svg" alt="icone de X pra fechar o menu">
+            </button>
+
+            <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Trending</a>
+            <a href="#">Categorias</a>
+        </nav>
     </header>
 
     <main>
@@ -46,7 +58,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="terceira-secao">
             <div>
                 <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de computadores antigos">
 
